<resources>
    <string name="app_name">Numeric Facts</string>
    <string name="app_info">Bring meaning to your metrics and stories to your dates with our <font color='#DC7070'>app of interesting number facts.</font></string>
    <string name="date">Saturday, 3 August 2022</string>
    <string name="start">Start</string>
    <string name="hello">Hello!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letter">Have a beautiful day for you</string>
    <string name="math">math</string>
    <string name="date_type">date</string>
    <string name="trivia">trivia</string>
    <string name="random">random!</string>
    <string name="description_math"><![CDATA[This function will allow you to find out a fact about any <font color="#FF0000">mathematical number.</font>]]></string>
    <string name="description_trivia"><![CDATA[This function will allow you to find out a fact about <font color="#FF0000">anything.</font>]]></string>
    <string name="description_date"><![CDATA[This function will allow you to find out a fact about any <font color="#FF0000">date.</font>]]></string>
    <string name="enjoy">Enjoy!</string>
    <string name="ok">OK</string>
    <string name="text_type">You have chosen this type:</string>
    <string name="type">date.</string>
    <string name="enter_the_day">Enter the day</string>
    <string name="enter_the_month">Enter the month</string>
    <string name="choose">Choose</string>
    <string name="chosen_date">30</string>
    <string name="fact">April 30th is the day in 1894 that Coxey\'s Army reaches Washington, D.C. to protest the unemployment caused by the Panic of 1893.</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="history">History</string>
    <string name="remember_your_search">Remember your search</string>
    <string name="fact_list">2020 is the year that the Large Hadron Collider will be substantially upgraded.</string>
    <string name="int_and_type">year: 1894, type: date</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="find_your_favorites">Find your favorites</string>
    <string name="fact_list_2">April 30th is the day in 1894 that Coxey\'s Army reaches Washington, D.C. to protest the unemployment caused by the Panic of 1893.</string>
    <string name="error">Oops! There was some error, <font color='#DC7070'>sorry.</font></string>
    <string name="error_connection">Sorry, but an error has occurred. Check connection.</string>

</resources>