<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ResultFragment">

    <TextView
        android:id="@+id/chosen_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/chosen_date"
        android:textAppearance="@style/date"
        android:lineSpacingExtra="2sp"
        android:translationY="-0.9sp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/rectangle_2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_view_fact"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeTextType="uniform"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/fact"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/rectangle_1"
        app:layout_constraintTop_toTopOf="@id/rectangle_1"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:textAllCaps="false"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/add_to_favorites"
        android:layout_marginStart="20dp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/text_view_fact"
        app:layout_constraintStart_toStartOf="@id/rectangle_1"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:textAllCaps="false"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/ok"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/so_light_green"
        app:layout_constraintTop_toBottomOf="@id/text_view_fact"
        app:layout_constraintEnd_toEndOf="@id/rectangle_1"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1" />



    <ImageView
        android:id="@+id/rectangle_20"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_shadow"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/home"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/rectangle_20"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/home"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/green"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/home_icon"
        app:layout_constraintEnd_toEndOf="@id/home_icon"
        />

    <ImageView
        android:id="@+id/history_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/history"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toTopOf="@id/text_history"
        />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/history"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/black_grey"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/history_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/history_icon"
        app:layout_constraintEnd_toEndOf="@id/history_icon"
        />

    <ImageView
        android:id="@+id/favorites_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/favorites"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/rectangle_20"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/favorites"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/black_grey"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/favorites_icon"
        app:layout_constraintEnd_toEndOf="@id/favorites_icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>