<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkness"
    tools:context=".ui.fragments.ChooseNumberFragment">

    <ImageView
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rectangle_2"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="-20.5dp"
        android:clipToOutline="true"
        android:background="@drawable/button_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rectangle_1" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="-26.5dp"
        android:layout_marginEnd="15dp"
        android:clipToOutline="true"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rectangle_1" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/description"
        android:text="@string/text_type"
        android:fontFamily="@font/abeezee_regular"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toStartOf="@id/rectangle_1"
        app:layout_constraintBottom_toTopOf="@id/text_description_type"
        app:layout_constraintEnd_toEndOf="@id/rectangle_1"
        app:layout_constraintTop_toTopOf="@id/rectangle_1" />


    <TextView
        android:id="@+id/text_description_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:textAppearance="@style/description"
        android:text="@string/type"
        android:layout_marginTop="20dp"
        android:textColor="@color/red"
        android:fontFamily="@font/abeezee_regular"
        app:layout_constraintStart_toStartOf="@id/text_description"
        app:layout_constraintBottom_toTopOf="@id/rectangle_20"
        app:layout_constraintEnd_toEndOf="@id/text_description"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <ImageView
        android:id="@+id/rectangle_20"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/edittext_shadow"
        android:elevation="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/text_description_type"
        app:layout_constraintBottom_toTopOf="@id/choose"
        app:layout_constraintStart_toStartOf="@id/text_description"
        app:layout_constraintEnd_toEndOf="@id/text_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:hint="@string/enter_the_day"
        android:elevation="5dp"
        android:background="@drawable/edittext_shadow"
        app:boxBackgroundColor="@color/light_grey"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_20"
        app:layout_constraintStart_toStartOf="@id/rectangle_20"
        app:layout_constraintEnd_toEndOf="@id/rectangle_20" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee_italic"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/purple_200"
            android:textColorHint="@color/red" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:textAllCaps="false"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/choose"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/rectangle_20"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
        app:layout_constraintStart_toStartOf="@id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@id/rectangle_1" />





    <ImageView
        android:id="@+id/rectangle_24"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_shadow"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/home"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/rectangle_24"
        app:layout_constraintTop_toTopOf="@id/rectangle_24"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/home"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/green"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/home_icon"
        app:layout_constraintEnd_toEndOf="@id/home_icon"
        />

    <ImageView
        android:id="@+id/history_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/history"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/home_icon"
        app:layout_constraintEnd_toEndOf="@id/favorites_icon"
        app:layout_constraintTop_toTopOf="@id/rectangle_24"
        app:layout_constraintBottom_toTopOf="@id/text_history"
        />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/history"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/black_grey"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/history_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/history_icon"
        app:layout_constraintEnd_toEndOf="@id/history_icon"
        />

    <ImageView
        android:id="@+id/favorites_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/favorites"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/rectangle_24"
        app:layout_constraintTop_toTopOf="@id/rectangle_24"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/favorites"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/black_grey"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/favorites_icon"
        app:layout_constraintEnd_toEndOf="@id/favorites_icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>