<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/description_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/rectangle_2"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/abeezee_regular"
            android:gravity="center_horizontal|top"
            android:text="@string/error"
            android:textAppearance="@style/description"
            app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
            app:layout_constraintEnd_toEndOf="@id/rectangle_1"
            app:layout_constraintStart_toStartOf="@id/rectangle_1"
            app:layout_constraintTop_toTopOf="@id/rectangle_1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/enjoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/enjoy"
            android:textAppearance="@style/description"
            app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
            app:layout_constraintEnd_toEndOf="@id/text_description"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toTopOf="@id/text_description"
            app:layout_constraintVertical_bias="0.55" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rectangle_2"
            android:fontFamily="@font/abeezee_italic"
            android:text="@string/ok"
            android:textAppearance="@style/description"
            android:textColor="@color/white"
            app:backgroundTint="@color/so_light_green"
            app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
            app:layout_constraintEnd_toEndOf="@id/enjoy"
            app:layout_constraintStart_toStartOf="@id/enjoy"
            app:layout_constraintTop_toTopOf="@id/enjoy"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>