<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkness"
    tools:context=".ui.fragments.DescriptionFragment">


    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="55dp"
        android:clipToOutline="true"
        android:background="@drawable/button_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rectangle_1" />



    <ImageView
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rectangle_2"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/description"
        android:text="@string/description"
        android:fontFamily="@font/abeezee_regular"
        android:gravity="center_horizontal|top"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/rectangle_1"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@id/rectangle_1"
        app:layout_constraintTop_toTopOf="@id/rectangle_1" />

    <TextView
        android:id="@+id/enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"
        android:textAppearance="@style/description"
        android:fontFamily="@font/abeezee_regular"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/text_description"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@id/text_description"
        app:layout_constraintTop_toTopOf="@id/text_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAppearance="@style/description"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:background="@drawable/rectangle_2"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/so_light_green"
        app:layout_constraintStart_toStartOf="@id/enjoy"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@id/enjoy"
        app:layout_constraintTop_toTopOf="@id/enjoy" />

    <ImageView
        android:id="@+id/rectangle_20"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_shadow"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/home"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/rectangle_20"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/home"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/green"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/home_icon"
        app:layout_constraintEnd_toEndOf="@id/home_icon"
        />

    <ImageView
        android:id="@+id/history_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/history"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/home_icon"
        app:layout_constraintEnd_toEndOf="@id/favorites_icon"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toTopOf="@id/text_history"
        />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/history"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/black_grey"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/history_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/history_icon"
        app:layout_constraintEnd_toEndOf="@id/history_icon"
        />

    <ImageView
        android:id="@+id/favorites_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/favorites"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/rectangle_20"
        app:layout_constraintTop_toTopOf="@id/rectangle_20"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/favorites"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/black_grey"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/favorites_icon"
        app:layout_constraintEnd_toEndOf="@id/favorites_icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>